App.jsx等、React開発に必要なファイルを作成しました

--- a/views/index.html
+++ b/views/index.html
@@ -4,43 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HOME</title>
-  <link rel="stylesheet" href="../stylesheets/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-  <header id="header"></header>
-  <main>
-    <div class="container">
-      <div class="incomplete-area">
-        <p class="title">未完了一覧</p>
-        <div class="headline">
-          <span class="contents">内容</span>
-          <span class="plan">予定日</span>
-        </div>
-        <ul id="incomplete-list">
-          <div class="list-row">
-            <li>未完了のTODO</li>
-            <span class="detail-plan">2023/11/17</span>
-          </div>
-        </ul>
-      </div>
-      <div class="complete-area">
-        <p class="title">完了一覧</p>
-        <div class="headline">
-          <span class="contents">内容</span>
-          <span class="plan">完了日</span>
-        </div>
-        <ul id="complete-list">
-          <div class="list-row">
-            <li>完了したTODO</li>
-            <span class="detail-plan">2023/11/17</span>
-          </div>
-        </ul>
-      </div>
-    </div>
-  </main>
-  <script src="../config/index.js"></script>
-  <script type="text/javascript">
-    getItems(false);
-  </script>
+	<div id="root"></div>
 </body>
+
 </html>
