POSTアクションを実装できました

--- a/todo_react/src/stylesheets/style.css
+++ b/todo_react/src/stylesheets/style.css
@@ -175,3 +175,9 @@ button:hover {
 .another-page {
   margin: 8px 0;
 }
+
+/* error-message */
+.error-message {
+  color: red;
+  padding-left: 8px;
+}
